Move node unit test files to folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,9 +209,9 @@ if(CATKIN_ENABLE_TESTING)
     find_package(rostest REQUIRED)
     add_rostest_gtest(node_unit_tests_exe 
     launch/node_unit_tests_launcher.test 
-    test/node_unit_tests.cpp 
-    test/calculator_test.cpp
-    test/listener_impl_test.cpp)
+    test/nodes/node_unit_tests.cpp 
+    test/nodes/calculator_test.cpp
+    test/nodes/listener_impl_test.cpp)
     target_link_libraries(node_unit_tests_exe ${catkin_LIBRARIES} node_unit_tests)
 endif()
 ## Add folders to be run by python nosetests
