Add polynomial test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,9 +117,10 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
-    src
-  ${catkin_INCLUDE_DIRS}
+        # include
+        src
+        ${catkin_INCLUDE_DIRS}
+        lib
 )
 
 ## Declare a C++ library
@@ -195,7 +196,9 @@ include_directories(
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 SET(UNIT_TEST unit_test)
 
-catkin_add_gtest(${UNIT_TEST} test/library/unit_test_example.cpp)
+catkin_add_gtest(${UNIT_TEST}
+        test/library/unit_main.cpp
+        lib/SimpleStateEstimation.cpp)
 if(TARGET ${UNIT_TEST})
   target_link_libraries(${UNIT_TEST} ${catkin_LIBRARIES})
 endif()
@@ -244,3 +247,10 @@ add_dependencies(add_two_ints_server beginner_tutorials_gencpp)
 add_executable(add_two_ints_client src/add_two_ints_client.cpp)
 target_link_libraries(add_two_ints_client ${catkin_LIBRARIES})
 add_dependencies(add_two_ints_client beginner_tutorials_gencpp)
+
+###################
+### SandBoxNode ###
+###################
+
+
+
